--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <p><code>print("Hello Python)</code></p>
+        <p><code>print "Hello Python" </code></p>
       </section>
 
     </div>
